Adição de chamada da lista, através do método get do Http, e utilização do rxjs

--- a/crud-angular/src/app/courses/courses/courses.component.html
+++ b/crud-angular/src/app/courses/courses/courses.component.html
@@ -4,6 +4,7 @@
     <span>Cursos Disponíveis</span>
   </mat-toolbar>
 
+  <!-- dataSource ou é array/lista de informações ou é Observable -->
   <table mat-table [dataSource]="courses" class="mat-elevation-z8">
 
     <!-- Name Column -->
