--- a/crud-angular/src/app/courses/courses/courses.component.html
+++ b/crud-angular/src/app/courses/courses/courses.component.html
@@ -1,29 +1,38 @@
 <mat-card>
-
   <mat-toolbar color="primary">
     <span>Cursos Disponíveis</span>
   </mat-toolbar>
 
   <!-- dataSource ou é array/lista de informações ou é Observable -->
-  <table mat-table [dataSource]="courses" class="mat-elevation-z8">
 
-    <!-- Name Column -->
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef> Curso </th>
-      <td mat-cell *matCellDef="let course"> {{ course.name }} </td>
-    </ng-container>
+  <!-- se inscreve no Observable e extrai as informações que ele retorna, atribuindo a variável local 'courses' -->
+  <div *ngIf="courses$ | async as courses; else loading"> <!-- verifica se já tem os dados carregados -->
 
-    <!-- Category Column -->
-    <ng-container matColumnDef="category">
-      <th mat-header-cell *matHeaderCellDef> Categoria </th>
-      <td mat-cell *matCellDef="let course"> {{ course.category }} </td>
-    </ng-container>
+    <!-- tabela usa essa lista para renderizar a informação -->
+    <table mat-table [dataSource]="courses" class="mat-elevation-z8">
+      <!-- Name Column -->
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef>Curso</th>
+        <td mat-cell *matCellDef="let course">{{ course.name }}</td>
+      </ng-container>
 
-    <!-- quais colunas vai mostrar na tabela -->
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <!-- para cada linha, vai mostrar essas colunas separadas na variável displayedColumns -->
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      <!-- Category Column -->
+      <ng-container matColumnDef="category">
+        <th mat-header-cell *matHeaderCellDef>Categoria</th>
+        <td mat-cell *matCellDef="let course">{{ course.category }}</td>
+      </ng-container>
 
-  </table>
+      <!-- quais colunas vai mostrar na tabela -->
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <!-- para cada linha, vai mostrar essas colunas separadas na variável displayedColumns -->
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+  </div>
+
+  <ng-template #loading>
+    <div class="loading-spinner">
+      <mat-spinner></mat-spinner>
+    </div>
+  </ng-template>
 
 </mat-card>
