Adição de tratamento de error, através do catchError, e retorno pop-up, através do MatDialog

--- a/crud-angular/src/app/courses/courses/courses.component.html
+++ b/crud-angular/src/app/courses/courses/courses.component.html
@@ -1,7 +1,5 @@
 <mat-card>
-  <mat-toolbar color="primary">
-    <span>Cursos Disponíveis</span>
-  </mat-toolbar>
+  <mat-toolbar color="primary">Cursos Disponíveis</mat-toolbar>
 
   <!-- dataSource ou é array/lista de informações ou é Observable -->
 
