--- a/crud-angular/src/app/courses/courses/courses.component.html
+++ b/crud-angular/src/app/courses/courses/courses.component.html
@@ -22,6 +22,31 @@
         </td>
       </ng-container>
 
+      <!-- Actions Column -->
+      <ng-container matColumnDef="actions">
+        <mat-header-cell *matHeaderCellDef>
+
+          <!-- CREATE BUTTON -->
+          <button mat-mini-fab color="accent" aria-label="Adicionar um curso">
+            <mat-icon (click)="onAdd()">add</mat-icon>
+          </button>
+        </mat-header-cell>
+
+        <mat-cell *matCellDef="let course"> <!-- let course - para cada registro na coleção, será realizada uma ação -->
+          <!-- UPDATE BUTTON -->
+          <button mat-icon-button color="primary" aria-label="Editar curso">
+            <mat-icon>edit</mat-icon>
+          </button>
+
+          <!-- DELETE BUTTON -->
+          <button mat-icon-button color="warn" aria-label="Remover curso">
+            <mat-icon>delete</mat-icon>
+          </button>
+
+        </mat-cell>
+
+      </ng-container>
+
       <!-- quais colunas vai mostrar na tabela -->
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <!-- para cada linha, vai mostrar essas colunas separadas na variável displayedColumns -->
